--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import "tailwindcss";
 @import "tw-animate-css";
 
@@ -6,6 +7,7 @@
 @plugin "@tailwindcss/forms";
 
 :root {
+  --font-Inter: 'Inter', sans-serif;
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
@@ -38,6 +40,10 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --color-primary-green: #86BC25;
+  --color-border-grey: #CBD5E1;
+  --color-dark-grey: #393939;
+  --color-light-grey: #BBBCBC;
 }
 
 .dark {
@@ -110,6 +116,10 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --color-primary-green: var(--color-primary-green);
+  --color-border-grey: var(--color-border-grey);
+  --color-dark-grey: var(--color-dark-grey);
+  --color-light-grey: var(--color-light-grey);
 }
 
 @layer base {
@@ -117,7 +127,9 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground font-sans;
+  }
+  html {
+    font-family: var(--font-Inter);
   }
 }
-
